# ldap-auth-utils

./: Makefile.in  README.md  config.sed  configure  configure.ac  functions.in  ldap-auth-utils.conf  ldap_auth  ldap_auth_init  ldap_grpadd  ldap_grpdel  ldap_host_manage  ldap_passwd  ldap_passwd.in  ldap_replica  ldap_ssl  ldap_useradd  ldap_userdel
man/: Makefile  Makefile.in  ldap-auth-utils.conf.5  ldap_auth.1  ldap_auth_init.1  ldap_grpadd.1  ldap_grpdel.1  ldap_host_manage.1  ldap_passwd.1  ldap_replica.1  ldap_ssl.1  ldap_useradd.1  ldap_userdel.1
po/: Makefile  Makefile.in  default.pot  ko.po
schema/: init.ldif  ldapns.schema  sudo.ldif
